--- a/samples/edd-sample-theme/style.css
+++ b/samples/edd-sample-theme/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: EDD Test Theme
+Theme Name: EDD Sample Theme
 Theme URI: http://pippinsplugins.com
 Description: An example theme to show how EDD licensing works
 Author: Pippin Williamson, Devin Price
 Author URI: http://pippinsplugins.com
-Version: 0.9
+Version: 1.0
 License: GNU General Public License v2.0 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
